Changelog for CinemaVision

[- 1.0.4 -]

- add:     Ability to pass multiple movie IDs to the addon: movieid=<id>|<id>|<id>|...
- add:     Ability to pass nodialog to the addon to suppress the playlist editor dialog
- fix:     Error caused when when playing movies passed via movieid arg

[- 1.0.3 -]

- fix:     Encoding errors caused by non-ascii characters in genres
- add:     Warning dialog when saving a sequence that does not contain a feature module

[- 1.0.2 -]

- change:  Improve logging and add a dialog for sequence loading errors
- fix:     Error when testing play/resume/abort actions when the action file is not set

[- 1.0.1 -]

- add:     Now disables GUI sounds when playing a sequence
- fix:     Trivia Slides->Trivia rename failed on some platforms
- change:  Trivia Slides->Trivia rename now removes Trivia folder first and logs the actions
- fix:     Bug preventing the selection of non-default sequences

[- 1.0.0 -]

- add:     Default 3D sequence
- add:     You can now load the default sequences
- fix:     Videos with multiple audio streams could sometimes fail audio format detection
- fix:     Error caused by trailers with missing release date
- add:     Setting in section 'General' under heading 'Extras': 'Install context menu add-on'

[- 1.0.0b1 -]

- fix:     When clearing action file in the module, was displaying Default()
- add:     Localize settings strings
- add:     Added ability to test actions from the module and addon settings
- change:  Removed settings button in Actions: 'Check action file(s) for errors'
- add:     Add 'Test' button for 'Pause', 'Resume' and 'Abort' action settings
- change:  Change Action module option 'Check for errors' to 'Test'
- change:  Sequence title now displays in the upper right background
- add:     Addon version now displays in the upper left background
- change:  Trivia Slides directory name changed to Trivia - will auto-rename when loading content
- change:  Added more details to the playlist editor
