@@ -5,6 +5,11 @@ Changelog for CinemaVision
 - add:     Ability to pass multiple movie IDs to the addon: movieid=<id>|<id>|<id>|...
 - add:     Ability to pass nodialog to the addon to suppress the playlist editor dialog
 - fix:     Error caused when when playing movies passed via movieid arg
+- change:  Change script:// action to python:// (though script:// will still work)
+- add:     Now shows a dialog on failure to write a sequence file
+- fix:     Another error caused by non-ascii characters in genres
+- fix:     Bug causing trailers from the CV Trailers folder not to work
+- change:  'Content Folder' scraper for trailers name changed to 'CV Trailers Folder'
 
 [- 1.0.3 -]
 
